cat upd - TODO refactor, makefile upd

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,18 +2,19 @@ CC=gcc
 CFLAGS=-c -Wall -Wextra -Werror -std=c11
 LDFLAGS=-Wall -Wextra -Werror
 EXECUTABLE=s21_cat
+CATDIR=cat/
+SOURCES=$(CATDIR)s21_cat.c $(CATDIR)parsing.c $(CATDIR)cat_functions.c
 OBJECTS=$(SOURCES:.c=.o)
-SOURCES=s21_cat.c parsing.c cat_functions.c cat_flags_struct.h
 
-
-all: $(SOURCES) $(EXECUTABLE)
+all: $(EXECUTABLE)
 	
 $(EXECUTABLE): $(OBJECTS) 
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
 
-.c.o:
+$(CATDIR)/%.o: $(CATDIR)/%.c
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
-	rm -rf *.o $(EXECUTABLE)
+	rm -rf $(OBJECTS) $(EXECUTABLE)
 
+rebuild: clean all
