--- a/src/grep/Makefile
+++ b/src/grep/Makefile
@@ -3,6 +3,7 @@ CFLAGS=-c -Wall -Wextra -Werror -std=c11
 LDFLAGS=-Wall -Wextra -Werror
 
 EXECUTABLE=s21_grep
+EXECUTABLE_TEST=s21_grep_test
 
 SOURCES=s21_grep.c grep_parsing.c grep_functions.c
 
@@ -10,7 +11,10 @@ OBJECTS=$(SOURCES:.c=.o)
 
 .PHONY: all clean rebuild
 
-all: $(EXECUTABLE)
+all: $(EXECUTABLE) $(EXECUTABLE_TEST)
+
+$(EXECUTABLE_TEST):
+	$(CC) $(LDFLAGS) s21_grep_test.c -o s21_grep_test
 
 $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(LDFLAGS) $^ -o $@
@@ -19,6 +23,6 @@ $(EXECUTABLE): $(OBJECTS)
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
-	rm -rf $(OBJECTS) $(EXECUTABLE)
+	rm -rf $(OBJECTS) $(EXECUTABLE) $(EXECUTABLE_TEST)
 
 rebuild: clean all
